[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage RL OpenEnv Environment"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
dependencies = [
    "openenv-core",
    "fastapi",
    "pydantic",
    "uvicorn",
    "scikit-learn",
    "python-dotenv>=1.2.2",
]

[project.scripts]
server = "server.app:main"
